fix header gap and intro width

--- a/style.css
+++ b/style.css
@@ -1,125 +1,155 @@
-@-ms-viewport{
-  width: extend-to-zoom;
-  zoom: 1.0;
+@-ms-viewport {
+    width: extend-to-zoom;
+    zoom: 1;
 }
 /* as found here: https://webdesign.tutsplus.com/articles/quick-tip-dont-forget-the-viewport-meta-tag--webdesign-5972 */
+
 body {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  vertical-align: baseline;
-  background-color: #fff;
-  color: #000;
-  width: 100%;
-  font-family: monospace;
-  font-size: 1em;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
+    background-color: #fff;
+    color: #000;
+    width: 100%;
+    font-family: monospace;
+    font-size: 1em;
+    box-sizing: border-box;
 }
 
 #navbar {
-  position: sticky;
-  top: 0;
-  height: 5vh;
-  width: 100%;
-  margin: 0;
-  background-color: orange;
-  /*display: none;*/
+    position: fixed;
+    top: 0;
+    height: 5vh;
+    width: 100%;
+    background-color: orange;
+    /*
+    display: none;
+    */
 }
 
 #navbar ul {
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
 }
 
-section, div, h1, h2, h3, p, ul, li, a, img {
-  margin: 0;
+/*
+#nav-bar ul {
+    flex-direction: column;
+    align-items: center;
+    padding-inline-start: 0px;
+}
+
+#nav-bar li {
+    height: 40px;
+    width: 100%;
+    border: 4px #1f0000;
+    border-style: solid double double solid;
+    margin: 2px;
+    padding: 12px 12px 0 12px;
+    text-align: center;
+}
+*/
+
+section,
+div,
+h1,
+h2,
+h3,
+p,
+ul,
+li,
+a,
+img {
+    margin: 0;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 #welcome-section {
-  height: 95vh;
-  background-color: purple;
+    height: 100vh;
+    background-color: purple;
+    overflow: scroll;
 }
 
 #welcome-section img {
-  display: block;
+    display: block;
+    align: center;
+    max-width: 100vw;
 }
 
 #welcome-section h1 {
-  text-align: center;
+    text-align: center;
 }
 
 #projects {
-  background-color: green;
+    background-color: green;
 }
 
 #projects h2 {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 
 #flex-wrapper {
-  margin: 0 5vw;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+    margin: 0 5vw;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 #contact {
-  background-color: yellow;
-  height: 20vh;
+    background-color: yellow;
+    height: 20vh;
 }
 
 .project-tile {
-  background-color: lightgrey;
-  margin: 2em;
+    background-color: lightgrey;
+    margin: 2em;
 }
 
 .project-tile h3 {
+    font-family: "Courier New", Courier, monospace;
 }
 
 .tile-footer {
-  text-align: center;
+    text-align: center;
 }
 
 @media screen and (max-width: 700px) {
+    .project-tile {
+        max-width: 95vw;
+    }
 
-  .project-tile {
-    max-width: 95vw;
-  }
-
-  .project-tile img {
-    max-width: 95vw;
-  }
-
+    .project-tile img {
+        max-width: 95vw;
+    }
 }
 
 @media screen and (min-width: 700px) {
+    #welcome-section p {
+        width: 40vw;
+        margin: 0 auto;
+    }
 
-  #welcome-section {
-    width: 40vw;
-    margin: 0 auto;
-  }
+    #welcome-section img {
+        width: 20vw;
+        margin: 2em auto;
+    }
 
-  #welcome-section img {
-    width: 20vw;
-    margin: 2em auto;
-  }
+    .project-tile {
+        width: 25vw;
+        max-width: 400px;
+        min-width: 250px;
+    }
 
-  .project-tile {
-    width: 25vw;
-    max-width: 400px;
-    min-width: 250px;
-  }
-
-  .project-tile img {
-    width: 25vw;
-    max-width: 400px;
-    min-width: 250px;
-  }
-
+    .project-tile img {
+        width: 25vw;
+        max-width: 400px;
+        min-width: 250px;
+    }
 }
